match-engine: CNR-2773: use getDeclaredConstructor()